--- a/kotlin-rx/data/build.gradle
+++ b/kotlin-rx/data/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     // OkHttp3
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
+    // Test
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-all:1.10.19'
 
     implementation project(':domain')
 }
