--- a/kotlin-rx/domain/build.gradle
+++ b/kotlin-rx/domain/build.gradle
@@ -8,6 +8,10 @@ dependencies {
     // Rx
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // Test
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-all:1.10.19'
 }
 
 sourceCompatibility = "7"
