--- a/kotlin-rx/app/build.gradle
+++ b/kotlin-rx/app/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation project(":data")
-    implementation project(":domain")
+    implementation project(':data')
+    implementation project(':domain')
 
     // Anko
     implementation 'org.jetbrains.anko:anko:0.10.8'
@@ -43,7 +43,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     // Rx
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     // Test
