--- a/kotlin-rx-koin/data/src/main/AndroidManifest.xml
+++ b/kotlin-rx-koin/data/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.youknow.firebase.auth.data"/>
+          package="com.youknow.data"/>
