--- a/kotlin-coroutine-aac/app/build.gradle
+++ b/kotlin-coroutine-aac/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     // Jetpack - Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc03"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03"
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc03"
 
     // Retrofit
