--- a/kotlin-databinding-coroutine-aac/app/build.gradle
+++ b/kotlin-databinding-coroutine-aac/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03"
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc03"
 
+    // KTX
+    implementation "androidx.fragment:fragment-ktx:1.1.0"
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
